# GameProject

./: CMakeLists.txt  FindSDL2_image.cmake
ArtModelClass/: ArtModel.cpp  ArtModel.h  Mesh.cpp  Mesh.h
Assets/: Cube.gpmesh  Sphere.gpmesh
cmake/: CMakeCache.txt  Engine  Makefile  cmake_install.cmake
headers/: Actor.h  Camera.h  Component.h  Const.h  Display.h  EasyMesh.h  Game.h  InputComponent.h  Math.h  MeshComponent.h  MoveComponent.h  PlaneActor.h  Renderer.h  Shader.h  SpriteComponent.h  Texture.h  Transform.h  Util.h  VertexArray.h
shaders/: BasicMesh.vert  Phong.frag  Phong.vert  Sprite.frag  Sprite.vert
source/: Actor.cpp  Camera.cpp  Component.cpp  Display.cpp  EasyMesh.cpp  Game.cpp  Math.cpp  MeshComponent.cpp  MoveComponent.cpp  PlaneActor.cpp  Renderer.cpp  Shader.cpp  SpriteComponent.cpp  Texture.cpp  Transform.cpp  Util.cpp  VertexArray.cpp  main.cpp
